/iTrade/ChangeLog
===============================================================================

On the road for v0.4.5 (Nausicaa)

===============================================================================

2006-05-28  Gilles Dumortier <dgil@ieee.org>
	* Quote view : bad display (time/hours) (SF bug 1424415)
	* Remove CVS $id$ in source file (SF bug 1496343)
	* Import plugin : number of years (SF bug 1485060)
	* continue to work on v0.4.5 release :-)

===============================================================================
2006-05-28  Gilles Dumortier <dgil@ieee.org>

	OFFICIAL release v0.4.2
		SVN tag : ITRADE_0_4_2_COCA2
		SVN branch : ITRADE_0_4_2_COCA2_BRANCH

	* live connector is deprecated because link has been securized :-(

2006-05-11  Gilles Dumortier <dgil@ieee.org>
	* Portfolio evaluation : Divide by Zero (SF bug 1486241)
	* Add public registration for a quote (SF bug 1486243) (privately then
	  publicly listed on the market or exchange shares from private to
	  public company). Tax side will be implemented at later time ...

2006-05-08  Gilles Dumortier <dgil@ieee.org>
	* Add a way to configure live website ... edit usrdata/live.txt file

2006-05-04  Gilles Dumortier <dgil@ieee.org>
	* 23:19 -> Test Update / Commit / Export  <-
	* 22:50 -> Migrate from CVS to Subversion <-

	* New snapshot ! Matrix & Operations could have some regression
	  introduced by new mechanisms (order by, live backup, scalable fonts)

	* Fix a strange bug with colorTrend() when prevtrade does not exist
	* Live backup using direct IP
	* Operation View : add a Toolbar (SF bug 1477442)
	* Operation view : scalable Fonts (SF bug 1481623)
	* Operation View : Order by clicking the column title (SF bug 1481379)
	* Quote View : market open, no trade : no time display (SF bug 1481645)
	* Operation View : window default size was too small (SF bug 1481448)

2006-05-03  Gilles Dumortier <dgil@ieee.org>
	* Matrix View : Order By by clicking the column title (SF bug 1481113)