@@ -1,0 +1,3 @@
+CA0679011084;Barrick Gold;012955;ABX
+USM8791A1099;ON TRACK INNOV.;;OTIV
+NL0000400653;Axalto;;AXL
