@@ -1,0 +1,4 @@
+2006-05-22;C;Virement;4000.000000;0.000000;0;-1.000000
+2006-05-23;B;USM8791A1099;500.000000;9.990000;50;1.000000
+2006-05-25;B;USM8791A1099;500.000000;9.990000;55;5.000000
+2006-05-24;B;USM8791A1099;500.000000;9.990000;55;4.000000
